--- a/src/app/components/home/home-nav/home-nav.component.html
+++ b/src/app/components/home/home-nav/home-nav.component.html
@@ -49,9 +49,8 @@
           </div>
         </h5>
         <div class="card-body">
-          <h5 class="card-title">Utente</h5>
-          <p class="card-text">Gestione delle informazioni di accesso, Informazioni generali dell'utente e Gestione
-            Anamnesi.</p>
+          <h5 class="card-title">Area Utente</h5>
+          <p class="card-text">Gestione delle tue carte e delle vendite, Informazioni generali dell'utente e Gestione Account</p>
           <a [routerLink]="['/home/utente']" class="btn btn-primary">Vai alla pagina</a>
         </div>
       </div>
@@ -62,8 +61,8 @@
           <div class="rounded-3 mb-3"><i class="bi bi-search"></i></div>
         </h5>
         <div class="card-body">
-          <h5 class="card-title">Ricerca Misurazioni</h5>
-          <p class="card-text">Ricerca le misurazioni in base ad un intervallo di date e alla posizione dell'utente</p>
+          <h5 class="card-title">DataBase Carte</h5>
+          <p class="card-text">Ricerca tutte le carte</p>
           <a [routerLink]="['/home/ricerca']" class="btn btn-primary">Vai alla pagina</a>
         </div>
       </div>
