--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -6,16 +6,9 @@
         <div class="text-center ">
           <span>
             <img class=" d-inline" src="../../../../assets/img/logo.png" style="width: 290px; margin-right: 20px; margin-bottom: 63px;">
-            <h1 class="display-5 fw-bolder mb-2 d-inline" style="color: #fe7b00;">Banca Dati</h1>
           </span>
           
-          <p class="lead text-white-50 mb-1">Il progetto si propone la realizzazione di una banca dati contenuta
-            su un sito web, idonea ad ospitare le informazioni provenienti dalla
-            SmartApp (SOLARE). La banca dati sarà predisposta per permettere l'accesso ai dati relativi all'esposizione eritemale di lavoratori
-            unitamente a informazioni inserite dai lavoratori stessi relative
-            all'attività svolta, che saranno inseriti nell'applicazione dal
-            lavoratore prima dell'utilizzo o derivati da dispositivi
-            multisensore.</p>
+          <p class="lead text-white-50 mb-1">Il progetto MTG SELL fa 'nsacco de cose</p>
         </div>
       </div>
     </div>
