--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header" id="head-applicazioni">
         <h3>
-            <strong>Entra in BANCA DATI Solare </strong>
+            <strong>Entra in MTG Sell App </strong>
         </h3>
 
         <br>
