--- a/src/app/components/home/home-nav/home-nav.component.html
+++ b/src/app/components/home/home-nav/home-nav.component.html
@@ -1,36 +1,9 @@
-<!-- <header class="bg-dark py-5">
   <div class="container px-5">
     <div class="row gx-5 justify-content-center">
       <div class="col-lg-12">
         <div class="text-center ">
           <img class="mb-5" src="../../../../assets/img/logo.png" style="width: 330px;">
-          <h1 class="display-5 fw-bolder text-white mb-2">Banca Dati</h1>
-          <p class="lead text-white-50 mb-1">Il progetto si propone la realizzazione di una banca dati contenuta
-            su un sito web, idonea ad ospitare le informazioni provenienti dalla
-            SmartApp (nome). La banca dati sarà predisposta per permettere una
-            raccolta di dati relativi all'esposizione eritemale di lavoratori
-            unitamente a informazioni inserite dai lavoratori stessi relative
-            all'attività svolta, che saranno inseriti nell'applicazione dal
-            lavoratore prima dell'utilizzo o derivati da dispositivi
-            multisensore.!</p>
-        </div>
-      </div>
-    </div>
-    <div class="row gx-5 mt-2 justify-content-center">
-      <div class="col-lg-12">
-        <div class="text-center ">
-          <h5 class="fw-bolder text-white mb-3">Partecipanti</h5>
-          <div class="row ">
-            <div class="col-sm-4">
-              <img class="mb-5 mt-3"  class="rounded"  src="../../../../assets/svg/sapienza-light.svg" style="width: 250px;">
-            </div>
-            <div class="col-sm-4 ">
-              <img class="mb-5 mt-3" class="rounded" src="../../../../assets/img/logo-unimore.jpg" style="width: 250px;">
-            </div>
-            <div class="col-sm-4">
-              <img class="mb-5 mt-3"  class="rounded"  src="../../../../assets/img/logo-inail.png" style="width: 170px;">
-            </div>
-          </div>
+          <p class="lead text-white-50 mb-1">Il progetto Mtg Sell fa 'nsacco de cose!</p>
         </div>
       </div>
     </div>
