--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,16 +1,9 @@
 <!-- Footer -->
 <footer class="py-1 bg-dark sticky-footer" style="background-color:rgb(240, 172, 55) !important;">
     <div class="container px-5">
-        <p class="m-0 text-center text-white">Copyright © Sapienza Università di Roma 2023   
-            <a class="navbar-brand" href="https://www.uniroma1.it/">
-                <img src="../../../../assets/svg/sapienza-dark.svg" style="width: 100px;"></a>
+        <p class="m-0 text-center text-white">Copyright © MTG SELL APP 2024   
+            <a class="navbar-brand" [routerLink]="['welcome']"><img src="../../../../assets/img/logo_dark.png" style="width: 80px;"></a>
         </p>
         
     </div>
 </footer>
-<!-- <footer class=" text-center text-white" style="background-color:rgb(240, 172, 55) !important;">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2023 Copyright:
-        <a class="text-white" href="">solare.com</a>
-    </div>
-</footer> -->
