--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark  border-light  border-bottom" >
     <div class="container px-5">
-        <a class="navbar-brand" [routerLink]="['home']"><img src="../../../../assets/img/logo.png" style="width: 120px;"></a>
+        <a class="navbar-brand" [routerLink]="['welcome']"><img src="../../../../assets/img/logo.png" style="width: 120px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['/home/utente']">Utente</a></li>
-                <li class="nav-item"><a class="nav-link" [routerLink]="['/home/ricerca']">Ricerca</a></li>
+                <li class="nav-item" *ngIf="isAuthenticated()" ><a class="nav-link active"  aria-current="page" [routerLink]="['/home']">Home</a></li>
+                <li class="nav-item" *ngIf="isAuthenticated()" ><a class="nav-link" [routerLink]="['/home/utente']">Utente</a></li>
+                <li class="nav-item" *ngIf="isAuthenticated()" ><a class="nav-link" [routerLink]="['/home/ricerca']">Ricerca</a></li>
+                <li class="nav-item" *ngIf="!isAuthenticated()" ><a class="nav-link" [routerLink]="['/login']">Log-In</a></li>
             </ul>
         </div>
         <div class="dropdown" *ngIf="isAuthenticated()" style="margin-left: 10px;">
