--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -5,7 +5,7 @@
       <div class="col-lg-12">
         <div class="text-center ">
           <span>
-            <img class=" d-inline" src="../../../../assets/img/logo.png" style="width: 290px; margin-right: 20px; margin-bottom: 63px;">
+            <img class=" d-inline" src="../../../../assets/img/logo.png" style="width: 290px; ">
           </span>
           
           <p class="lead text-white-50 mb-1">Il progetto MTG SELL fa 'nsacco de cose</p>
