--- a/src/app/components/home/home-nav/home-nav.component.html
+++ b/src/app/components/home/home-nav/home-nav.component.html
@@ -1,19 +1,4 @@
-  <div class="container px-5">
-    <div class="row gx-5 justify-content-center">
-      <div class="col-lg-12">
-        <div class="text-center ">
-          <img class="mb-5" src="../../../../assets/img/logo.png" style="width: 330px;">
-          <p class="lead text-white-50 mb-1">Il progetto Mtg Sell fa 'nsacco de cose!</p>
-        </div>
-      </div>
-    </div>
-  </div>  -->
 <div class="container px-5 my-5">
-  <div class="row gx-5 mb-5 d-flex justify-content-center">
-    <div class="col-lg-12">
-      <img  src="../../../../assets/img/logo.png" style="width: 330px;">
-    </div>
-  </div>
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
@@ -23,7 +8,7 @@
         </h5>
         <div class="card-body">
           <h5 class="card-title">Area Utente</h5>
-          <p class="card-text">Gestione delle tue carte e delle vendite, Informazioni generali dell'utente e Gestione Account</p>
+          <p class="card-text">Gestione delle tue carte e delle vendite, Informazioni generali dell'utente</p>
           <a [routerLink]="['/home/utente']" class="btn btn-primary">Vai alla pagina</a>
         </div>
       </div>
