--- a/src/app/components/home/utente/utente.component.html
+++ b/src/app/components/home/utente/utente.component.html
@@ -11,10 +11,11 @@
       <div class="card mb-4">
         <div class="card-body text-center">
 
-          <img src="../../../../../assets/img/user.png" alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
-              <h5 class="my-3">{{user?.name + ' ' + user?.lastName}}</h5>
-              <p class="text-muted mb-1">Lavoratore</p>
-          
+          <img src="../../../../../assets/img/user.png" alt="avatar" class="rounded-circle img-fluid"
+            style="width: 150px;">
+          <h5 class="my-3">NAME</h5>
+          <p class="text-muted mb-1">Lavoratore</p>
+
 
 
         </div>
@@ -29,21 +30,11 @@
               <div class="form-group">
                 <i class="fas fa-globe fa-lg text-warning"></i>
                 <label for="userId">Username:</label>
-                <input id="userId" [disabled]="true" type="text" class="form-control" [value]="user?.username">
+                <input id="userId" [disabled]="true" type="text" class="form-control">
               </div>
 
 
             </li>
-            <!-- <li class="list-group-item d-flex  align-items-center p-3">
-              <div class="form-group">
-                <i class="fas fa-globe fa-lg text-warning"></i>
-                <label for="userId">Password:</label><br>
-                <button class="btn btn-primary">Modifica Password
-                  <fa-icon style="color: white" [icon]="faEdit"></fa-icon>
-                </button>
-
-              </div>
-            </li> -->
           </ul>
         </div>
       </div>
@@ -52,14 +43,13 @@
       <div class="card mb-4">
         <div class="card-body">
           <p class="mb-4">Informazioni Generali
-          </p><button class="btn btn-primary" (click)="navigate('/home/informazioni-generali')">Modifica Informazioni
-            Generali <fa-icon style="color: white" [icon]="faEdit"></fa-icon> </button>
+          </p>
           <div class="row mt-3">
             <div class="col-sm-3">
               <p class="mb-0">Nome</p>
             </div>
             <div class="col-sm-9">
-              <p class="text-muted mb-0">{{user?.name + ' ' + user?.lastName}}</p>
+              <p class="text-muted mb-0">TEST</p>
             </div>
           </div>
           <hr>
@@ -68,7 +58,7 @@
               <p class="mb-0">Data di nascita</p>
             </div>
             <div class="col-sm-9">
-              <p class="text-muted mb-0">{{user?.birthDate | date:'dd/MM/yyyy' }}</p>
+              <p class="text-muted mb-0">TEST</p>
             </div>
           </div>
           <hr>
@@ -77,26 +67,38 @@
               <p class="mb-0">Email</p>
             </div>
             <div class="col-sm-9">
-              <p class="text-muted mb-0">{{user?.email}}</p>
+              <p class="text-muted mb-0">TEST</p>
             </div>
           </div>
 
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngIf="cards.length > 0">
         <div class="col-md-12">
           <div class="card mb-4 mb-md-0">
             <div class="card-body">
-              <p class="mb-4">Anamnesi
-              </p> <button (click)="navigate('/home/anamnesi')" class="btn btn-primary">Modifica Anamnesi <fa-icon
-                  style="color: white" [icon]="faEdit"></fa-icon> </button>
-              <!--             
-                <p class="mb-1" style="font-size: .77rem;">01/01/2023</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div> -->
+              <p class="mb-4">Carte Possedute
+              </p>
 
+              <div class="container">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Name</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let item of cards">
+                      <td>{{ item.id }}</td>
+                      <td>{{ item.name }}</td>
+                    </tr>
+                  </tbody>
+                </table>
+
+                <pagination [boundaryLinks]="true" [(ngModel)]="currentPage" [totalItems]="totalItems"
+                  [itemsPerPage]="itemsPerPage" (pageChanged)="pageChanged($event)" [maxSize]=10></pagination>
+              </div>
             </div>
           </div>
         </div>
