correzioni carte possedute

--- a/src/app/components/home/ricerca/ricerca.component.html
+++ b/src/app/components/home/ricerca/ricerca.component.html
@@ -51,6 +51,7 @@
               <p>{{item.printedText ? item.printedText : item.oracleText}}</p>
             </div>
           </div>
+          <button (click)="aggiungiCarta(item.id)">Aggiungi Carta alla tua collezione</button>
         </div>
       </div>
     </div>
